--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,29 @@
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  padding: 0;
+  margin: 0;
+}
+
 .App {
   text-align: center;
+  max-width: 960px;
+  width: auto;
+  height: auto;
+  min-height: 100%;
+  background: linear-gradient(to bottom right, lightgrey, #ffe0cc);
+  margin: auto;
+  overflow: hidden;
 }
 
 .App-logo {
   /* animation: App-logo-spin infinite 5s linear; */
-  height: 7em;
+  height: 8em;
 }
 
 .App-header {
