--- a/client/src/components/like.css
+++ b/client/src/components/like.css
@@ -1,4 +1,11 @@
 .likeButton {
   cursor: pointer;
-  width: 10px;
+  width: auto;
+  margin-left: 5%;
+  transition: all 0.5s;
+}
+
+.likeButton:hover {
+  transform: scale(1.1);
+  filter: drop-shadow(5px 5px 5px #555);
 }
