--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,8 @@ h1 {
   width: auto;
   height: auto;
   min-height: 100%;
-  background: linear-gradient(to bottom right, lightgrey, #ffe0cc);
+  /* background: linear-gradient(to bottom right, lightgrey, #ffe0cc); */
+  background-color: #ffe0cc;
   margin: auto;
   overflow: hidden;
 }
@@ -27,10 +28,13 @@ h1 {
 }
 
 .App-header {
-  background-color: #222;
+  /* background-image: url("paws.jpeg");
+  background-size: contain; */
   height: 150px;
   padding: 20px;
-  color: white;
+  color: #F06F1E;
+  background-color: #fff2e6;
+  font-weight: bold;
 }
 
 .App-title {
