--- a/client/src/components/LoginPage.css
+++ b/client/src/components/LoginPage.css
@@ -1,29 +1,15 @@
-body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
-h1 {
-  padding: 0;
-  margin: 0;
-}
-
 .Page {
   text-align: center;
   max-width: 960px;
   width: auto;
   height: auto;
   min-height: 100%;
-  /* background: linear-gradient(to bottom right, lightgrey, #ffe0cc); */
   background-color: #ffe0cc;
   margin: auto;
   overflow: hidden;
 }
 
 .Logo {
-  /* animation: App-logo-spin infinite 5s linear; */
   height: 8em;
 }
 
@@ -41,16 +27,7 @@ h1 {
   font-size: 1.5em;
 }
 
-.Image {
-  height: 30em;
-  width: auto;
-  object-fit: contain;
-  margin-top: 30px;
-  border-radius: 5px;
-}
-
-.Link {
+.Login {
+  padding: 50px;
   color: #F06F1E;
-  font-weight: bold;
-  font-size: 25px;
 }
