--- a/client/src/components/like.css
+++ b/client/src/components/like.css
@@ -3,6 +3,9 @@
   width: auto;
   margin-left: 5%;
   transition: all 0.5s;
+  border: none;
+  outline: none;
+  background-color: transparent;
 }
 
 .likeButton:hover {
